<resources>
    <string name="app_name">TeslaNews</string>
    <string name="tab_home">Home</string>
    <string name="text_home">This is Home Channel.</string>
    <string name="tab_news">News</string>
    <string name="text_news">This is News Channel.</string>
    <string name="tab_video">Video</string>
    <string name="text_video">This is Video Channel.</string>
    <string name="tab_gov">Gov</string>
    <string name="text_gov">This is Government Channel.</string>
    <string name="tab_setting">Setting</string>
    <string name="text_setting">This is Setting Channel.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
